--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -9,7 +9,7 @@
 				{{ end }}
 			</a>
 
-			<button class="navbar-toggler rounded-0" type="button" data-toggle="collapse" data-target="#navigation">
+			<button class="navbar-toggler rounded-0" type="button" aria-label="Navigation Menu" data-toggle="collapse" data-target="#navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
