--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,10 @@
 
 {{ partial "testimonial.html" . }}
 
+<!--  
+Hiding Blog until posts are created
 {{ partial "blog.html" . }}
+--->
 
 {{ partial "contact.html" . }}
 
