--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,4 +33,8 @@ Hiding Blog until posts are created
 
 {{ partial "map.html" . }}
 
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/14540359.js"></script>
+<!-- End of HubSpot Embed Code -->
+
 {{ end }}
